[package]
name = "winelounge"
version = "0.1.0"
edition = "2021"

autobins = true

[dependencies]
chrono = "0.4"
rand = "0.8"

[dependencies.sdl2]
version = "0.35"
features = ["image", "ttf"]

[dependencies.tokio]
version = "1.18"
features = ["full"]
default-features = false

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = "debuginfo"
