[package]
name = "winelounge"
version = "0.1.0"
edition = "2021"

autobins = true
default-run = "winelounge"

[dependencies]
chrono = "0.4"
rand = "0.8"
sdl2 = { version = "0.35", features = ["image", "ttf"] }
tokio = { version = "1.19", features = ["full"], default-features = false }

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = "debuginfo"
