[package]
name = "winelounge"
version = "0.1.0"
edition = "2021"

autobins = true
default-run = "winelounge"

[dependencies]
chrono = "0.4"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8"
sdl2 = { version = "0.35", features = ["image", "ttf"] }
simple_logger = { version = "4.2", features = ["colors", "timestamps"], default-features = false }
tokio = { version = "1.34", features = ["full"], default-features = false }

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
strip = true
panic = "abort"
